Create IPC communication between debugger service and client app

--- a/androiddebuggersample/src/main/AndroidManifest.xml
+++ b/androiddebuggersample/src/main/AndroidManifest.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="pl.lab.mobile.androiddebugger">
-
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    package="pl.lab.mobile.androiddebuggersample">
 
     <application
         android:allowBackup="true"
@@ -11,24 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidDebugger">
-        <activity
-            android:name=".MainActivity"
-            android:launchMode="singleTop">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <service
-            android:name=".domain.service.DebuggerService"
-            android:enabled="true"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="pl.lab.mobile.androiddebugger.StartDebugger" />
-            </intent-filter>
-        </service>
     </application>
 
 </manifest>
