Remove unused dependencies. Refactor and clean code

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
             android:enabled="true"
             android:exported="true">
             <intent-filter>
-                <action android:name="pl.lab.mobile.androiddebugger.StartDebugger" />
+                <action android:name="pl.lab.mobile.androiddebugger.bind" />
             </intent-filter>
         </service>
     </application>
